{
    "name": "PlayerInputControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "2ae066bc-9f7f-44d8-8d74-bc18f2e28f2a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7c353ae3-3a8b-46eb-8be6-631729e38ce2",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.03,max=0.97)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "63d96208-21f3-484b-b259-1b6283523a1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack0",
                    "type": "Button",
                    "id": "91c0acd3-ba80-44a4-b6e9-519cf048b95d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack1",
                    "type": "Button",
                    "id": "ee89eea3-9dcc-4270-85d8-1c460c5f7f8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "342cc8d9-ce11-4a90-add9-3e618bb03fb0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2b3dc020-d5a5-48c3-a10a-a20bcae337c7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "65a00972-267e-42a1-a765-4a861c05fec6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Normalize(min=-1)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "77e725a2-ec7e-429d-89e4-8dc5cbb8d014",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Normalize(min=-1)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c398ad7f-7a74-4538-b997-846dbd57ade7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5c10f607-a909-428c-a9a9-18bd752c3e2c",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f7f3801-0a83-4a99-a5d3-73aa8ed3b754",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eea9d43f-a410-49c2-a929-926020b85304",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}